correccion crear  proyectos

--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -295,7 +295,8 @@
                     <div style="background-color: #b1b0b0;width: 40px;height: 40px; border: 1px solid #b1b0b0;border-radius: 24px;margin: auto;">
                         <i class="ri-bookmark-line" style="font-size: 24px;color: #4b4b4b;"></i>
                     </div>
-                    <p style="margin-top: 40%;"><b>Todos los ámbitos normativos</b></p>
+                    <p style="margin-top: 10px;height: 40px;"><b>Todos los ámbitos normativos</b></p>
+                    <p>Tomar en cuenta todos los ámbitos de los cuerpos legales.</p>
                 </div>
             </div>
         </div>
