--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1228,7 +1228,7 @@
                     
                     <div class="col-sm-8">
                         <h4>Cuerpos Legales</h4>
-                        <apx-chart [series]="basicBarChart.series" [chart]="basicBarChart.chart" [dataLabels]="basicBarChart.dataLabels" [plotOptions]="basicBarChart.plotOptions" [xaxis]="basicBarChart.xaxis" [colors]="basicBarChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="basicBarChartCuerpos.series" [chart]="basicBarChartCuerpos.chart" [dataLabels]="basicBarChartCuerpos.dataLabels" [legend]="basicBarChartCuerpos.legend" [plotOptions]="basicBarChartCuerpos.plotOptions" [xaxis]="basicBarChartCuerpos.xaxis" [colors]="basicBarChartCuerpos.colors" dir="ltr"></apx-chart>
                     </div>
 
                 </div>
@@ -1289,7 +1289,7 @@
                     
                     <div class="col-sm-8">
                         <h4>Artículos</h4>
-                        <apx-chart [series]="basicBarChart.series" [chart]="basicBarChart.chart" [dataLabels]="basicBarChart.dataLabels" [plotOptions]="basicBarChart.plotOptions" [xaxis]="basicBarChart.xaxis" [colors]="basicBarChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="basicBarChartArticulos.series" [chart]="basicBarChartArticulos.chart" [dataLabels]="basicBarChartArticulos.dataLabels" [legend]="basicBarChartArticulos.legend" [plotOptions]="basicBarChartArticulos.plotOptions" [xaxis]="basicBarChartArticulos.xaxis" [colors]="basicBarChartArticulos.colors" dir="ltr"></apx-chart>
                     </div>
 
                 </div>
