--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -26,7 +26,7 @@
                 <div class="col-xxl-4 col-lg-4 text-center" style="align-self: center;">
                     <div class="card-subtitle text-muted mb-3"><b>Avance</b></div>
                     <div class="progress progress-xl mb-3">
-                        <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                        <div class="progress-bar" [ngClass]="{'bg-danger': avance > 0 && avance < 25, 'bg-warning': avance > 25 && avance < 75, 'bg-success': avance > 75 }" role="progressbar" [style]="avance > 0 ? 'width:'+avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{avance}}%</div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-xxl-8 col-lg-8" style="text-align: left;">
@@ -49,45 +49,45 @@
                 
                 <div class="col-xxl-4 col-lg-4 text-center">
                     <div class="card-subtitle text-muted mb-3"><b>Cuerpos legales</b></div>
-                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
-            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
-            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
-            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                    <apx-chart [series]="customAngleChartCuerpos.series" [chart]="customAngleChartCuerpos.chart"
+            [plotOptions]="customAngleChartCuerpos.plotOptions" [labels]="customAngleChartCuerpos.labels"
+            [legend]="customAngleChartCuerpos.legend" [colors]="customAngleChartCuerpos.colors"
+            [responsive]="customAngleChartCuerpos.responsive" dir="ltr"></apx-chart>
                 </div>
                 
                 <div class="col-xxl-4 col-lg-4 text-center">
                     <div class="card-subtitle text-muted mb-3"><b>Artículos</b></div>
-                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
-            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
-            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
-            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                    <apx-chart [series]="customAngleChartArticulos.series" [chart]="customAngleChartArticulos.chart"
+            [plotOptions]="customAngleChartArticulos.plotOptions" [labels]="customAngleChartArticulos.labels"
+            [legend]="customAngleChartArticulos.legend" [colors]="customAngleChartArticulos.colors"
+            [responsive]="customAngleChartArticulos.responsive" dir="ltr"></apx-chart>
                 </div>
             </div>
 
             <div class="row justify-content-center mb-5">
                 <div class="col-xxl-4 col-lg-4 text-center">
                     <div class="card-subtitle text-muted mb-3"><b>Permisos</b></div>
-                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
-            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
-            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
-            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                    <apx-chart [series]="customAngleChartPermisos.series" [chart]="customAngleChartPermisos.chart"
+            [plotOptions]="customAngleChartPermisos.plotOptions" [labels]="customAngleChartPermisos.labels"
+            [legend]="customAngleChartPermisos.legend" [colors]="customAngleChartPermisos.colors"
+            [responsive]="customAngleChartPermisos.responsive" dir="ltr"></apx-chart>
                 </div>
                 
                 <div class="col-xxl-4 col-lg-4 text-center">
                     <div class="card-subtitle text-muted mb-3"><b>Reportes</b></div>
-                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
-            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
-            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
-            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                    <apx-chart [series]="customAngleChartReportes.series" [chart]="customAngleChartReportes.chart"
+            [plotOptions]="customAngleChartReportes.plotOptions" [labels]="customAngleChartReportes.labels"
+            [legend]="customAngleChartReportes.legend" [colors]="customAngleChartReportes.colors"
+            [responsive]="customAngleChartReportes.responsive" dir="ltr"></apx-chart>
                 </div>
                 
                 
                 <div class="col-xxl-4 col-lg-4 text-center">
                     <div class="card-subtitle text-muted mb-3"><b>Monitoreos</b></div>
-                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
-            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
-            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
-            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                    <apx-chart [series]="customAngleChartMonitoreo.series" [chart]="customAngleChartMonitoreo.chart"
+            [plotOptions]="customAngleChartMonitoreo.plotOptions" [labels]="customAngleChartMonitoreo.labels"
+            [legend]="customAngleChartMonitoreo.legend" [colors]="customAngleChartMonitoreo.colors"
+            [responsive]="customAngleChartMonitoreo.responsive" dir="ltr"></apx-chart>
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
                                                         <div class="col-lg-4 col">
                                                             <div class="row text-muted text-center">
                                                                 <div class="col-6 border-end border-end-dashed">
-                                                                    <h5 class="mb-1">08-08-2023</h5>
+                                                                    <h5 class="mb-1">{{s.evaluations.fecha_evaluacion ? (s.evaluations.fecha_evaluacion | date:"dd-MM-yy" ) : '-' }}</h5>
                                                                     <p class="text-muted mb-0">Fecha evaluación</p>
                                                                 </div>
                                                                 <div class="col-6">
@@ -171,7 +171,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-1 col">
-                                                            <span class="badge text-bg-warning">En proceso</span>
+                                                            <span class="badge" [ngClass]="{'text-bg-danger': !s.evaluations.estado || (s.evaluations.estado && s.evaluations.estado == 'NO CUMPLE'), 'text-bg-success': s.evaluations.estado && s.evaluations.estado == 'CUMPLE', 'text-bg-warning': s.evaluations.estado && s.evaluations.estado == 'CUMPLE PARCIALMENTE'}">{{s.evaluations.estado ? s.evaluations.estado : 'NO EVALUADO' }}</span>
                                                         </div>
                                                     </div>
                                                 </div>
