--- a/src/app/pages/projects/create/evaluation/follow/follow.component.html
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.html
@@ -49,7 +49,7 @@
                     </select>
                     <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
                         <div class="form-icon right">
-                            <input class="form-control form-control-icon flatpickr-input" type="text" placeholder="Fecha de evaluación" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                            <input class="form-control form-control-icon flatpickr-input" type="text" placeholder="Fecha de evaluación" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true" [dateFormat]="'d-m-y'">
                             <i class="ri-calendar-todo-fill"></i>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                                         [term]="service.searchTerm"></ngb-highlight>
                                     </td>
                                     <td>{{ data.fecha}}</td>
-                                    <td><span style="cursor: pointer;" class="badge" [ngClass]="{'badge-soft-warning': data.estado == 2,'badge-soft-success': data.estado == 1, 'badge-soft-danger': data.estado == 3}" (click)="changeStatusHallazgo(data.id, data.estado)">{{data.estado == 2 ? 'Pendiente' : (data.estado == 1 ? 'Completada' : 'No Completada') }}</span></td>
+                                    <td><span style="cursor: pointer;" class="badge" [ngClass]="{'badge-soft-warning': data.estado == 2,'badge-soft-success': data.estado == 1}" (click)="changeStatusHallazgo(data.id, data.estado)">{{data.estado == 1 ? 'Completada' : 'Pendiente' }}</span></td>
                                 </tr>
                             </tbody>
                             </table>
