--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -139,7 +139,7 @@
                         <div class="list-group">
 
                                 <ng-template #myArticles let-s="s">
-                                    <div class="team-list list-view-filter row" style="cursor: pointer;" (click)="goEvaluation(s.id)">
+                                    <div class="team-list list-view-filter row" style="cursor: pointer;" (click)="goEvaluation(s.id, s.evaluations)">
                                         <div class="col">
                                             <div class="card team-box">
                                                 
@@ -158,19 +158,19 @@
                                                                 </p>-->
                                                         </div>
 
-                                                        <div class="col-lg-4 col">
+                                                        <div class="col-lg-3 col">
                                                             <div class="row text-muted text-center">
-                                                                <div class="col-6 border-end border-end-dashed">
+                                                                <div class="col-12 border-end border-end-dashed">
                                                                     <h5 class="mb-1">{{s.evaluations.fecha_evaluacion ? (s.evaluations.fecha_evaluacion | date:"dd-MM-yy" ) : '-' }}</h5>
                                                                     <p class="text-muted mb-0">Fecha evaluación</p>
                                                                 </div>
-                                                                <div class="col-6">
+                                                                <!--<div class="col-6">
                                                                     <h5 class="mb-1">10</h5>
                                                                     <p class="text-muted mb-0">Hallazgos pendientes</p>
-                                                                </div>
+                                                                </div>-->
                                                             </div>
                                                         </div>
-                                                        <div class="col-lg-1 col">
+                                                        <div class="col-lg-2 col">
                                                             <span class="badge" [ngClass]="{'text-bg-danger': !s.evaluations.estado || (s.evaluations.estado && s.evaluations.estado == 'NO CUMPLE'), 'text-bg-success': s.evaluations.estado && s.evaluations.estado == 'CUMPLE', 'text-bg-warning': s.evaluations.estado && s.evaluations.estado == 'CUMPLE PARCIALMENTE'}">{{s.evaluations.estado ? s.evaluations.estado : 'NO EVALUADO' }}</span>
                                                         </div>
                                                     </div>
