--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1478,7 +1478,7 @@
 </div>
         <div class="row mb-4">
             <div class="col-12">
-                <button class="btn btn-success btn-label waves-effect right waves-light" style="float:right;" routerLink="/{{project_id}}/project-dashboard"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Terminar</button>
+                <button class="btn btn-success btn-label waves-effect right waves-light" style="float:right;" (click)="terminar()"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Terminar</button><!--routerLink="/{{project_id}}/project-dashboard"-->
             </div>
         </div>
         
