--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -17,7 +17,9 @@
                                     <button class="btn btn-primary btn-label waves-effect left waves-light" routerLink="/projects/{{project_id}}/identification"><i class="ri-arrow-left-line label-icon align-middle fs-16"></i> Identificación</button>
                                 </div>
                                 <div class="col-sm-auto">
-                                    <button type="button" class="btn btn-primary waves-effect waves-light"><!-- btn-label left <i class="ri-add-line label-icon align-middle fs-16"></i>--> Finalizar Evaluación</button>
+                                    <button type="button" class="btn btn-primary waves-effect waves-light" (click)="terminar()"><!-- btn-label left <i class="ri-add-line label-icon align-middle fs-16"></i>--> Finalizar Evaluación</button>
+                                    
+                                    <button type="button" style="margin-left: 20px;" class="btn btn-primary btn-label right waves-effect waves-light" [disabled]="project.estado < 3" (click)="goControl()"><i class="ri-arrow-right-line label-icon align-middle fs-16"></i> Control</button>
                                 </div>
                             </div>
                     </div>
