--- a/src/app/pages/projects/create/evaluation/task/task.component.scss
+++ b/src/app/pages/projects/create/evaluation/task/task.component.scss
@@ -21,3 +21,11 @@
     justify-items: center;
     align-items: center;
 }
+
+.mat-header-cell {
+    background: #E9EbEc !important;
+}
+
+.mdc-data-table__header-row{
+    background: #E9EbEc !important;
+}
